--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -182,6 +182,8 @@ cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0/IMC:
   max-imc-sessions: 1
 
 # This has worked with Cline and OpenCode but just slow.
+# You can't use IMC with this model because it doesn't have a consistent
+# prompt creation
 GLM-4.7-Flash-UD-Q8_K_XL: &base_GLM_4_7_Flash_UD_Q8_K_XL
   context-window: 131072
   nbatch: 2048
@@ -201,11 +203,27 @@ GLM-4.7-Flash-UD-Q8_K_XL/SPC:
   nseq-max: 1
   system-prompt-cache: true
 
-GLM-4.7-Flash-UD-Q8_K_XL/IMC:
-  <<: *base_GLM_4_7_Flash_UD_Q8_K_XL
+# Workig with KiloCode.
+# You can't use IMC with this model because it doesn't have a consistent
+# prompt creation
+gpt-oss-120b-F16: &base_gpt-oss-120b-F16
+  context-window: 131072
+  nbatch: 2048
+  nubatch: 512
+  cache-type-k: q8_0
+  cache-type-v: q8_0
+  flash-attention: enabled
+  nseq-max: 2
+  insecure-logging: true
+  sampling-parameters:
+    temperature: 1.0
+    top_p: 1.0
+    top_k: 50
+
+gpt-oss-120b-F16/SPC:
+  <<: *base_gpt-oss-120b-F16
   nseq-max: 1
-  incremental-cache: true
-  max-imc-sessions: 1
+  system-prompt-cache: true
 
 # ------------------------------------------------------------------------------
 # Good Reasoning models, tooling support, don't use with Agents.
@@ -229,23 +247,6 @@ gpt-oss-20b-Q8_0:
   flash-attention: enabled
   nseq-max: 2
   insecure-logging: true
-
-# Don't use with Agents.
-gpt-oss-120b-F16: &base_gpt-oss-120b-F16
-  context-window: 131072
-  nbatch: 2048
-  nubatch: 512
-  cache-type-k: q8_0
-  cache-type-v: q8_0
-  flash-attention: enabled
-  nseq-max: 2
-  insecure-logging: true
-
-gpt-oss-120b-F16/IMC:
-  <<: *base_gpt-oss-120b-F16
-  nseq-max: 1
-  incremental-cache: true
-  max-imc-sessions: 1
 
 # Great model but small context-window :(
 Qwen3-8B-Q8_0: &base_Qwen3-8B-Q8_0
