--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -87,32 +87,37 @@
 # ==============================================================================
 # CONFIGURATION NOTES
 #
-# If you want to use an Agent or Chat application that uses a System Prompt,
-# use these settings. OpenWebUI, OpenCode and Cline (with R1 off) will need this.
+# SPC and IMC are mutually exclusive - choose one based on your model's template.
+#
+# SYSTEM PROMPT CACHE (SPC)
+# -------------------------
+# Use SPC for models with inconsistent templates (GPT-OSS, GLM) or for simple
+# chat applications. SPC caches only the system prompt.
 #   nseq-max: 1
 #   system-prompt-cache: true
 #
-# If you are using an agentic client (Cline, OpenCode) where conversations
-# grow monotonically (each turn appends messages, never modifies earlier ones),
-# use incremental-cache. It caches all messages except the last one and extends
-# incrementally on each turn, avoiding redundant prefill computation.
+# INCREMENTAL MESSAGE CACHE (IMC)
+# -------------------------------
+# Use IMC for models with consistent templates (QWEN, Llama) where the template
+# produces identical output for the same messages regardless of conversation
+# length. IMC caches all messages except the last one and extends incrementally.
 #
-# The client must pass the KRONK_IMC_ID header with a unique session/user ID
-# to activate IMC. Each unique ID gets its own dedicated cache sequence (up to
-# max-imc-sessions). If no header is passed, the "default" id is used. On a
-# multi-user system that will cause problems.
+# The client must pass the KRONK_IMC_ID header with a unique session/user ID.
+# Each unique ID gets its own dedicated cache sequence (up to max-imc-sessions).
+# If no header is passed, the "default" id is used which causes problems on
+# multi-user systems.
 #   nseq-max: 1
 #   incremental-cache: true
 #   max-imc-sessions: 5      # Support up to 5 concurrent users (default 1)
 #
-# Cline is working great with Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/SPC and
-# cerebras_qwen3-coder-reap-25b-a3b-q8_0/SPC.
+# Cline is working great with Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/IMC and
+# cerebras_qwen3-coder-reap-25b-a3b-q8_0/IMC.
 #
 # Claude Code needs a model that handles tool calling well with a decent
 # context window. I have not found a model yet that works well with Claude Code.
 #
-# Stay away from using the gpt-oss model of any size with agents. It will not
-# behave in several aspects, but specfically it will not listen.
+# Kilo Code and Open Code is working well for simple things with gpt-oss-120b-F16.
+# Turn on SPC when using this model. You can't use IMC.
 #
 # You will notice with the Qwen3-8B-Q8_0 model a YARN configuration. This is
 # how you can extend the models context window when you need it.
@@ -143,11 +148,6 @@ Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL:
     top_p: 0.8
     top_k: 20
 
-Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/SPC:
-  <<: *base_Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL
-  nseq-max: 1
-  system-prompt-cache: true
-
 Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/IMC:
   <<: *base_Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL
   nseq-max: 1
@@ -169,11 +169,6 @@ cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0:
     temperature: 0.7
     top_p: 0.8
     top_k: 20
-
-cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0/SPC:
-  <<: *base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
-  nseq-max: 1
-  system-prompt-cache: true
 
 cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0/IMC:
   <<: *base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
