--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -130,7 +130,7 @@
 # TEXT INFERENCE MODELS
 
 # ------------------------------------------------------------------------------
-# Coding Agents and configured for Cline or Claude Code
+# Coding Agent Models
 
 # This has been the best with Cline.
 Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL:
@@ -154,7 +154,29 @@ Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/IMC:
   incremental-cache: true
   max-imc-sessions: 1
 
-# Smaller version of the 30B model and works well.
+# Working amazingly well with Kilo Code.
+# You can't use IMC with this model because it doesn't have a consistent
+# prompt creation
+gpt-oss-120b-F16: &base_gpt-oss-120b-F16
+  context-window: 131072
+  nbatch: 2048
+  nubatch: 512
+  cache-type-k: f16
+  cache-type-v: f16
+  flash-attention: enabled
+  nseq-max: 2
+  insecure-logging: true
+  sampling-parameters:
+    temperature: 1.0
+    top_p: 1.0
+    top_k: 50
+
+gpt-oss-120b-F16/SPC:
+  <<: *base_gpt-oss-120b-F16
+  nseq-max: 1
+  system-prompt-cache: true
+
+# Smaller version of the 30B model and works ok with Cline.
 cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0:
   &base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
   context-window: 131072
@@ -176,7 +198,7 @@ cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0/IMC:
   incremental-cache: true
   max-imc-sessions: 1
 
-# This has worked with Cline and OpenCode but just slow.
+# This has worked with agents but just slow.
 # You can't use IMC with this model because it doesn't have a consistent
 # prompt creation
 GLM-4.7-Flash-UD-Q8_K_XL: &base_GLM_4_7_Flash_UD_Q8_K_XL
@@ -198,28 +220,6 @@ GLM-4.7-Flash-UD-Q8_K_XL/SPC:
   nseq-max: 1
   system-prompt-cache: true
 
-# Workig with KiloCode.
-# You can't use IMC with this model because it doesn't have a consistent
-# prompt creation
-gpt-oss-120b-F16: &base_gpt-oss-120b-F16
-  context-window: 131072
-  nbatch: 2048
-  nubatch: 512
-  cache-type-k: q8_0
-  cache-type-v: q8_0
-  flash-attention: enabled
-  nseq-max: 2
-  insecure-logging: true
-  sampling-parameters:
-    temperature: 1.0
-    top_p: 1.0
-    top_k: 50
-
-gpt-oss-120b-F16/SPC:
-  <<: *base_gpt-oss-120b-F16
-  nseq-max: 1
-  system-prompt-cache: true
-
 # ------------------------------------------------------------------------------
 # Good Reasoning models, tooling support, don't use with Agents.
 
@@ -232,6 +232,10 @@ Qwen3-Coder-30B-A3B-Instruct-Q8_0:
   flash-attention: enabled
   nseq-max: 2
   insecure-logging: true
+  sampling-parameters:
+    temperature: 0.7
+    top_p: 0.8
+    top_k: 20
 
 gpt-oss-20b-Q8_0:
   context-window: 98304
@@ -242,6 +246,10 @@ gpt-oss-20b-Q8_0:
   flash-attention: enabled
   nseq-max: 2
   insecure-logging: true
+  sampling-parameters:
+    temperature: 1.0
+    top_p: 1.0
+    top_k: 50
 
 # Great model but small context-window :(
 Qwen3-8B-Q8_0: &base_Qwen3-8B-Q8_0
@@ -252,6 +260,10 @@ Qwen3-8B-Q8_0: &base_Qwen3-8B-Q8_0
   cache-type-v: q8_0
   flash-attention: enabled
   nseq-max: 2
+  sampling-parameters:
+    temperature: 0.7
+    top_p: 0.8
+    top_k: 20
 
 # Extended context with YaRN scaling (32k training → 131k).
 Qwen3-8B-Q8_0/YARN:
