--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -18,7 +18,7 @@
 #   split-mode: row                      # Multi-GPU split: none, layer, row (row recommended for MoE models)
 #   system-prompt-cache: false           # Cache system prompt KV state for reuse across requests
 #   incremental-cache: false             # Incremental message caching for agentic workflows (Cline, OpenCode)
-#   max-imc-sessions: 1                  # Max concurrent IMC sessions/users (default: 1, each gets own cache)
+#   max-cache-sessions: 1                  # Max concurrent IMC sessions/users (default: 1, each gets own cache)
 #   cache-min-tokens: 100                # Min tokens before caching (default: 100, applies to both cache types)
 #   rope-scaling-type: yarn              # RoPE scaling: none, linear, yarn
 #   yarn-orig-ctx: 32768                 # Original training context size (nil = from model)
@@ -93,6 +93,10 @@
 # -------------------------
 # Use SPC for models with inconsistent templates (GPT-OSS, GLM) or for simple
 # chat applications. SPC caches only the system prompt.
+#
+# The client should pass the KRONK_CACHE_ID header with a unique session/user ID.
+# Each unique ID gets its own dedicated cache sequence (up to max-cache-sessions).
+# If no header is passed, the "default" id is used which causes problems on
 #   nseq-max: 1
 #   system-prompt-cache: true
 #
@@ -102,29 +106,48 @@
 # produces identical output for the same messages regardless of conversation
 # length. IMC caches all messages except the last one and extends incrementally.
 #
-# The client must pass the KRONK_IMC_ID header with a unique session/user ID.
-# Each unique ID gets its own dedicated cache sequence (up to max-imc-sessions).
+# The client should pass the KRONK_CACHE_ID header with a unique session/user ID.
+# Each unique ID gets its own dedicated cache sequence (up to max-cache-sessions).
 # If no header is passed, the "default" id is used which causes problems on
 # multi-user systems.
 #   nseq-max: 1
 #   incremental-cache: true
-#   max-imc-sessions: 5      # Support up to 5 concurrent users (default 1)
+#   max-cache-sessions: 5      # Support up to 5 concurrent users (default 1)
 #
-# Cline is working great with Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/IMC and
-# cerebras_qwen3-coder-reap-25b-a3b-q8_0/IMC.
+# CONTEXT WINDOW AUTO-SCALING (IMC ONLY)
+# ---------------------------------------
+# When IMC is enabled, Kronk automatically scales the internal context window
+# so each slot gets the full configured context-window size. IMC caches the
+# full conversation, so without scaling you'd get reduced effective context
+# per slot. This does not apply to SPC (system prompt is typically small).
 #
-# Claude Code needs a model that handles tool calling well with a decent
-# context window. I have not found a model yet that works well with Claude Code.
+# Formula: Internal NCtx = context-window × (nseq-max + max-cache-sessions)
 #
-# Kilo Code and Open Code is working well for simple things with gpt-oss-120b-F16.
-# Turn on SPC when using this model. You can't use IMC.
+# Example:
+#   context-window: 128k, nseq-max: 1, max-cache-sessions: 1
+#   → Internal NCtx = 128k × 2 = 256k
+#   → Each slot gets full 128k context
 #
-# You will notice with the Qwen3-8B-Q8_0 model a YARN configuration. This is
-# how you can extend the models context window when you need it.
+# This means IMC increases VRAM usage proportionally. Plan accordingly.
+#
+# AGENT CLIENT NOTES
+# -------------------------------
+# Cline is working great with Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/IMC. The
+# settings use a KV Cache type of f16. You need to use f16 to get the accuracy
+# from the model we need.
 #
 # NOTE: The R1 message format in Cline is a specialized prompt structure
 # required for DeepSeek R1 models, which converts system prompts into user
 # messages. Turn that off.
+#
+# Kilo Code is working get with gpt-oss-120b-F16. When the KV Cache type is f16,
+# the model is being accurate with tool calling. Agent clients that use
+# traditional tool calling, use this model.
+#
+# MISCELLANEOUS NOTES
+# -------------------------------
+# You will notice with the Qwen3-8B-Q8_0 model a YARN configuration. This is
+# how you can extend the models context window when you need it.
 
 # ==============================================================================
 # TEXT INFERENCE MODELS
@@ -138,8 +161,8 @@ Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL:
   context-window: 131072
   nbatch: 2048
   nubatch: 512
-  cache-type-k: q8_0
-  cache-type-v: q8_0
+  cache-type-k: f16
+  cache-type-v: f16
   flash-attention: enabled
   nseq-max: 2
   insecure-logging: true
@@ -152,10 +175,10 @@ Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/IMC:
   <<: *base_Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL
   nseq-max: 1
   incremental-cache: true
-  max-imc-sessions: 1
+  max-cache-sessions: 1
 
 # Working amazingly well with Kilo Code.
-# You can't use IMC with this model because it doesn't have a consistent
+# You can't use IMC with this model because it doesn't have consistent
 # prompt creation
 gpt-oss-120b-F16: &base_gpt-oss-120b-F16
   context-window: 131072
@@ -182,8 +205,8 @@ cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0:
   context-window: 131072
   nbatch: 2048
   nubatch: 512
-  cache-type-k: q8_0
-  cache-type-v: q8_0
+  cache-type-k: f16
+  cache-type-v: f16
   flash-attention: enabled
   nseq-max: 2
   insecure-logging: true
@@ -196,17 +219,17 @@ cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0/IMC:
   <<: *base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
   nseq-max: 1
   incremental-cache: true
-  max-imc-sessions: 1
+  max-cache-sessions: 1
 
-# This has worked with agents but just slow.
-# You can't use IMC with this model because it doesn't have a consistent
+# This model runs too slow on my M4/128GB.
+# You can't use IMC with this model because it doesn't have consistent
 # prompt creation
 GLM-4.7-Flash-UD-Q8_K_XL: &base_GLM_4_7_Flash_UD_Q8_K_XL
   context-window: 131072
   nbatch: 2048
   nubatch: 512
-  cache-type-k: q8_0
-  cache-type-v: q8_0
+  cache-type-k: f16
+  cache-type-v: f16
   flash-attention: enabled
   nseq-max: 2
   insecure-logging: true
@@ -285,7 +308,7 @@ Qwen3-8B-Q8_0/IMC:
   <<: *base_Qwen3-8B-Q8_0
   nseq-max: 1
   incremental-cache: true
-  max-imc-sessions: 2
+  max-cache-sessions: 2
 
 # ------------------------------------------------------------------------------
 # Non-Reasoning models, tooling support, don't use with Agents.
