--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -86,45 +86,43 @@
 # ==============================================================================
 # CONFIGURATION NOTES
 #
-# SPC and IMC are mutually exclusive - choose one based on your model's template.
+# SPC and IMC are mutually exclusive - choose one based on your model's
+# template consistency.
 #
 # SYSTEM PROMPT CACHE (SPC)
 # -------------------------
-# Use SPC for models with inconsistent templates (GPT-OSS, GLM) or for simple
-# chat applications. SPC caches only the system prompt.
+# Use SPC for models with inconsistent templates (GPT-OSS, GLM) or for
+# simple chat applications. SPC caches only the system prompt.
 #
-# The client should pass the KRONK_CACHE_ID header with a unique session/user ID.
-# If no header is passed, the "default" id is used which causes problems on
-#   nseq-max: 1
+# The client should pass the KRONK_CACHE_ID header with a unique
+# session/user ID. If no header is passed, the "default" id is used
+# which causes problems on multi-user systems.
+#
 #   system-prompt-cache: true
 #
 # INCREMENTAL MESSAGE CACHE (IMC)
 # -------------------------------
-# Use IMC for models with consistent templates (QWEN, Llama) where the template
-# produces identical output for the same messages regardless of conversation
-# length. IMC caches all messages except the last one and extends incrementally.
+# Use IMC for models with consistent templates (QWEN, Llama) where the
+# template produces identical output for the same messages regardless of
+# conversation length. IMC caches all messages except the last one and
+# extends incrementally.
 #
-# The client should pass the KRONK_CACHE_ID header with a unique session/user ID.
-# If no header is passed, the "default" id is used which causes problems on
-# multi-user systems.
-#   nseq-max: 1
+# The client should pass the KRONK_CACHE_ID header with a unique
+# session/user ID. If no header is passed, the "default" id is used
+# which causes problems on multi-user systems.
+#
 #   incremental-cache: true
 #
-# CONTEXT WINDOW AUTO-SCALING (IMC ONLY)
+# KV CACHE PARTITIONING
 # ---------------------------------------
-# When IMC is enabled, Kronk automatically scales the internal context window
-# so each slot gets the full configured context-window size. IMC caches the
-# full conversation, so without scaling you'd get reduced effective context
-# per slot. This does not apply to SPC (system prompt is typically small).
+# llama.cpp internally partitions the KV cache across sequences. Each
+# slot gets context-window / nseq-max tokens of capacity. Cache type
+# (off, SPC, IMC) does not affect VRAM — all modes allocate the same
+# slots and KV cache. The difference is how cached state is managed:
 #
-# Formula: Internal NCtx = context-window × nseq-max
-#
-# Example:
-#   context-window: 128k, nseq-max: 2
-#   → Internal NCtx = 128k × 2 = 256k
-#   → Each slot gets full 128k context
-#
-# This means IMC increases VRAM usage proportionally. Plan accordingly.
+#   No caching: Slots cleared after each request.
+#   SPC:        System prompt tokens cached in RAM, re-decoded per request.
+#   IMC:        Slots dedicated to a user, full conversation cached in KV.
 #
 # AGENT CLIENT NOTES
 # -------------------------------
