--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -174,7 +174,7 @@ Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/IMC:
 # You can't use IMC with this model because it doesn't have consistent
 # prompt creation
 gpt-oss-120b-F16: &base_gpt-oss-120b-F16
-  context-window: 131072
+  context-window: 172032
   nbatch: 2048
   nubatch: 512
   cache-type-k: f16
@@ -195,7 +195,7 @@ gpt-oss-120b-F16/SPC:
 # Smaller version of the 30B model and works ok with Cline.
 cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0:
   &base_cerebras_qwen3-coder-reap-25b-a3b-q8_0
-  context-window: 131072
+  context-window: 172032
   nbatch: 2048
   nubatch: 512
   cache-type-k: f16
@@ -226,9 +226,9 @@ GLM-4.7-Flash-UD-Q8_K_XL: &base_GLM_4_7_Flash_UD_Q8_K_XL
   nseq-max: 2
   insecure-logging: true
   sampling-parameters:
-    temperature: 0.7
-    top_p: 0.8
-    top_k: 20
+    temperature: 1.0
+    top_p: 0.95
+    min_p: 0.01
 
 GLM-4.7-Flash-UD-Q8_K_XL/SPC:
   <<: *base_GLM_4_7_Flash_UD_Q8_K_XL
