--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -154,11 +154,15 @@ Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/IMC:
   nseq-max: 1
   incremental-cache: true
 
+Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/SPC:
+  nseq-max: 2
+  system-prompt-cache: true
+
 # Working amazingly well with Kilo Code.
 # You can't use IMC with this model because it doesn't have consistent
 # prompt creation
 gpt-oss-120b-F16/SPC:
-  nseq-max: 1
+  nseq-max: 2
   system-prompt-cache: true
 
 # Smaller version of the 30B model and works ok with Cline.
@@ -170,7 +174,7 @@ cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0/IMC:
 # You can't use IMC with this model because it doesn't have consistent
 # prompt creation
 GLM-4.7-Flash-UD-Q8_K_XL/SPC:
-  nseq-max: 1
+  nseq-max: 2
   system-prompt-cache: true
 
 # ------------------------------------------------------------------------------
