--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -131,20 +131,6 @@
 #               to VRAM (NSeqMax + 1).
 #   IMC:        Full conversation cached in KV, slots persist across requests.
 #
-# AGENT CLIENT NOTES
-# -------------------------------
-# Cline is working great with Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/IMC. The
-# settings use a KV Cache type of f16. You need to use f16 to get the accuracy
-# from the model we need.
-#
-# NOTE: The R1 message format in Cline is a specialized prompt structure
-# required for DeepSeek R1 models, which converts system prompts into user
-# messages. Turn that off.
-#
-# Kilo Code is working get with gpt-oss-120b-F16/IMC. When the KV Cache type is
-# f16, the model is being accurate with tool calling. Agent clients that use
-# traditional tool calling, use this model.
-#
 # MISCELLANEOUS NOTES
 # -------------------------------
 # You will notice with the Qwen3-8B-Q8_0 model a YARN configuration. This is
@@ -154,9 +140,46 @@
 # TEXT INFERENCE MODELS
 
 # ------------------------------------------------------------------------------
-# Coding Agent Models
+# Agent: This is working well with Cline and Kilo.
 
-# This has been the best with Cline.
+Qwen3-Coder-Next-UD-Q4_K_XL/IMC-Cline:
+  nseq-max: 1
+  incremental-cache: true
+
+Qwen3-Coder-Next-UD-Q4_K_XL/SPC-Cline:
+  nseq-max: 1
+  system-prompt-cache: true
+
+Qwen3-Coder-Next-UD-Q4_K_XL/IMC-Kilo:
+  nseq-max: 2
+  incremental-cache: true
+
+Qwen3-Coder-Next-UD-Q4_K_XL/SPC-Kilo:
+  nseq-max: 2
+  system-prompt-cache: true
+
+# ------------------------------------------------------------------------------
+# Agent: This is working well with Cline and Kilo.
+
+Qwen3-Coder-Next-UD-Q3_K_XL/IMC-Cline:
+  nseq-max: 1
+  incremental-cache: true
+
+Qwen3-Coder-Next-UD-Q3_K_XL/SPC-Cline:
+  nseq-max: 1
+  system-prompt-cache: true
+
+Qwen3-Coder-Next-UD-Q3_K_XL/IMC-Kilo:
+  nseq-max: 2
+  incremental-cache: true
+
+Qwen3-Coder-Next-UD-Q3_K_XL/SPC-Kilo:
+  nseq-max: 2
+  system-prompt-cache: true
+
+# ------------------------------------------------------------------------------
+# Agent: This is working ok with Cline.
+
 Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/IMC:
   nseq-max: 1
   incremental-cache: true
@@ -170,25 +193,25 @@ Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL/SPC:
   nseq-max: 1
   system-prompt-cache: true
 
-# Working amazingly well with Kilo Code.
-# You can't use IMC with this model because it doesn't have consistent
-# prompt creation
+# ------------------------------------------------------------------------------
+# This is working ok with Kilo.
+
 gpt-oss-120b-F16/SPC:
-  nseq-max: 1
+  nseq-max: 2
   system-prompt-cache: true
 
 gpt-oss-120b-F16/IMC:
   nseq-max: 2
   incremental-cache: true
 
-# Smaller version of the 30B model and works ok with Cline.
+# ------------------------------------------------------------------------------
+
+# Agent: Smaller version of the 30B model and works ok with Cline.
 cerebras_Qwen3-Coder-REAP-25B-A3B-Q8_0/IMC:
   nseq-max: 1
   incremental-cache: true
 
 # This model runs too slow on my M4/128GB.
-# You can't use IMC with this model because it doesn't have consistent
-# prompt creation
 GLM-4.7-Flash-UD-Q8_K_XL/SPC:
   nseq-max: 1
   system-prompt-cache: true
